# random_discogs

./: Cargo.toml  README.md  config.json
css/: main.css
src/: config.rs  constants.rs  main.rs
templates/: index.tera
