[package]
name = "random_discogs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
once_cell = "1.20.2"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["rustls-tls", "cookies", "charset"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tera = "1.20.0"
tl = "0.7.8"
urlencoding = "2.1.3"
